// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`is the Book quote valid All items need to have a author 1`] = `
Object {
  "author": Any<String>,
  "character": "",
  "quote": "TEST",
  "title": "",
  "year": 2001,
}
`;

exports[`is the Book quote valid All items need to have a author 2`] = `
Object {
  "author": Any<String>,
  "character": "",
  "quote": "TES312312T2",
  "title": "",
  "year": 2001,
}
`;

exports[`is the Book quote valid All items need to have a character 1`] = `
Object {
  "author": "",
  "character": Any<String>,
  "quote": "TEST",
  "title": "",
  "year": 2001,
}
`;

exports[`is the Book quote valid All items need to have a character 2`] = `
Object {
  "author": "",
  "character": Any<String>,
  "quote": "TES312312T2",
  "title": "",
  "year": 2001,
}
`;

exports[`is the Book quote valid All items need to have a quote 1`] = `
Object {
  "author": "",
  "character": "",
  "quote": Any<String>,
  "title": "",
  "year": 2001,
}
`;

exports[`is the Book quote valid All items need to have a quote 2`] = `
Object {
  "author": "",
  "character": "",
  "quote": Any<String>,
  "title": "",
  "year": 2001,
}
`;

exports[`is the Book quote valid All items need to have a title 1`] = `
Object {
  "author": "",
  "character": "",
  "quote": "TEST",
  "title": Any<String>,
  "year": 2001,
}
`;

exports[`is the Book quote valid All items need to have a title 2`] = `
Object {
  "author": "",
  "character": "",
  "quote": "TES312312T2",
  "title": Any<String>,
  "year": 2001,
}
`;

exports[`is the Book quote valid All items need to have a year 1`] = `
Object {
  "author": "",
  "character": "",
  "quote": "TEST",
  "title": "",
  "year": Any<Number>,
}
`;

exports[`is the Book quote valid All items need to have a year 2`] = `
Object {
  "author": "",
  "character": "",
  "quote": "TES312312T2",
  "title": "",
  "year": Any<Number>,
}
`;
